# wordscalpel

./: .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: benchmark.py
tests/: test_core.py  test_edge_cases.py  test_file_ops.py
wordscalpel/: __init__.py  adapters.py  cli.py  core.py  exceptions.py  file_ops.py  plugins.py  utils.py
