[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordscalpel"
version = "2.0.3"
description = "Surgical, occurrence-based word manipulation for strings and files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["text", "nlp", "word", "occurrence", "manipulation", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

[project.scripts]
wordscalpel = "wordscalpel.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wordscalpel*"]
